fixed z-index header problem

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
      background-image: url("../img/309.png");
    }
    .body-layer{
-      background: hsla(180, 94%, 50%, 0.35)
+      background: hsla(180, 94%, 50%, 0.35);
    }
 
    /*NAVBAR BURGER-ICON*/
@@ -47,6 +47,7 @@
     font-family: 'Quicksand', sans-serif;
     color: #fff;
     background:#303440;
+    z-index: 2;
   }
 
   .header-icon{
@@ -71,15 +72,15 @@
 
 /*NAVBAR-SIDE*/
   #navigation {
-      /*padding-top: 30px;
-      padding-right: 20px;
-      padding-left: 20px;*/
       padding: 2.4em 1.5em 0 1.5em;
       background:rgba(46, 49, 61, 0.83);
       border-radius: 0px 8px 8px 0px;
       top: 50%;
       transform: translateY(-50%);
       position: fixed;
+      /*position: absolute;
+      top: 0;
+      left: 0*/
       z-index: 0;
   }
 
@@ -259,6 +260,7 @@ rgba(32, 78, 54, 0.2),*/
       font-size: 80%;
     }
   }
+
 /* ==========================================================================
   Author's custom styles
   ========================================================================== */
